@@ -89,11 +89,11 @@ int do_statusbar_input(bool *meta_key, bool *func_key, bool *s_or_t,
 	input == NANO_BACKSPACE_KEY || input == NANO_DELETE_KEY ||
 	input == NANO_CUT_KEY ||
 #ifndef NANO_TINY
-	input == NANO_NEXTWORD_KEY || input == NANO_BRACKET_KEY ||
+	input == NANO_NEXTWORD_KEY ||
 #endif
 	(*meta_key == TRUE && (
 #ifndef NANO_TINY
-	input == NANO_PREVWORD_KEY ||
+	input == NANO_PREVWORD_KEY || input == NANO_BRACKET_KEY ||
 #endif
 	input == NANO_VERBATIM_KEY)));
 
@@ -180,7 +180,8 @@ int do_statusbar_input(bool *meta_key, bool *func_key, bool *s_or_t,
 		    break;
 #ifndef NANO_TINY
 		case NANO_BRACKET_KEY:
-		    do_statusbar_find_bracket();
+		    if (*meta_key == TRUE)
+			do_statusbar_find_bracket();
 		    break;
 #endif
 		case NANO_VERBATIM_KEY:
